guest interest level

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Hello React!</title>
+        <title>SPY Host Home</title>
     </head>
     <body>
         <div id="example"></div>
