--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
         <title>SPY Host Home</title>
     </head>
     <body>
-        <div id="example"></div>
+        <div id="app-root"></div>
     </body>
 </html>
