--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <link rel="icon" type="image/x-icon" href="/favicon.png" />
         <title>SPY Host Home</title>
     </head>
     <body>
