--- a/app/src/index.html
+++ b/app/src/index.html
@@ -2,11 +2,15 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/x-icon" href="/hosthome/hosthome/img/favicon.png" />
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="/hosthome/hosthome/img/favicon.png"
+        />
         <title>SPY Host Home</title>
     </head>
     <body>
         <div id="app-root"></div>
-        <div id="modal-root"></div>        
+        <div id="modal-root"></div>
     </body>
 </html>
