--- a/app/src/index.html
+++ b/app/src/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="/img/favicon.png" />
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
         <title>SPY Host Home</title>
     </head>
     <body>
