Add header to coordinator dashboard and refactor some layout components

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -22,8 +22,8 @@
       }
 
       #app-root {
-        display: flex;
-        flex: 1;
+        width: 100vw;
+        height: 100vh;
       }
     </style>
   </head>
